outcomes/2026-03/NGOMCT-344/solution/metadata/objects/Training__c/Training__c.object-meta.xml
<CustomObject>
    <label>Training</label>
    <nameField>
        <displayFormat>TRN-{0000}</displayFormat>
        <label>Training Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>