outcomes/2026-03/NGOMCT-344/solution/metadata/objects/Training__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <inlineHelpText>For Live and E-learning (self service) records, this is the Customer. For HCP training records, this is the Provider Contact&apos;s Account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>