outcomes/2026-03/NGOMCT-344/solution/metadata/objects/Training__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Specifies the product that an individual will be trained on.</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Omnipod 5</fullName>
            </value>
            <value>
                <fullName>DASH</fullName>
            </value>
            <value>
                <fullName>UST400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>