outcomes/2026-03/NGOMCT-344/solution/metadata/objects/Training__c/fields/Training_Method__c.field-meta.xml
<CustomField>
    <fullName>Training_Method__c</fullName>
    <description>Captures the mode of delivery for the training session.</description>
    <label>Training Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live Virtual</fullName>
            </value>
            <value>
                <fullName>Live In-Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>