outcomes/2026-03/NGOMCT-344/solution/metadata/objects/Training__c/fields/Training_Stage__c.field-meta.xml
<CustomField>
    <fullName>Training_Stage__c</fullName>
    <description>Tracks the current lifecycle stage of a training record.</description>
    <label>Training Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending Assignment</fullName>
            </value>
            <value>
                <fullName>Pending Acceptance</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Subscribed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Trained</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Paid</fullName>
                <isActive>false</isActive>
                <label>Paid</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>