outcomes/2026-03/NGOMCT-344/solution/metadata/objects/Training__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <description>Specifies the type of training that will be delivered</description>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Pod Training</fullName>
            </value>
            <value>
                <fullName>Insulin Start Training</fullName>
            </value>
            <value>
                <fullName>Pre-Pod + Insulin Start Training</fullName>
            </value>
            <value>
                <fullName>Follow-Up Training</fullName>
            </value>
            <value>
                <fullName>Pre-Pod + Saline/Insulin Start Training</fullName>
                <isActive>false</isActive>
                <label>Pre-Pod + Saline/Insulin Start Training</label>
            </value>
            <value>
                <fullName>Saline/Insulin Start Training</fullName>
                <isActive>false</isActive>
                <label>Saline/Insulin Start Training</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>