outcomes/2026-03/NGOMCT-344/solution/metadata/objects/Training__c/recordTypes/Live_Training.recordType-meta.xml
<RecordType>
    <fullName>Live_Training</fullName>
    <active>true</active>
    <description>This is used for both Live In-person and Live Virtual Trainings</description>
    <label>Live Training</label>
</RecordType>